1.15.5
------


1.15.4
------
(RB=275644)
ComplexResourceKey now tries to create key/param record templates using schemas
from the key spec

1.15.3
------
(RB=276699)
Added .pdscs for D2 related information into newly created d2-schemas module.

1.15.2
------
(RB=275463)
Added new fields to the Request toString method.

1.15.1
------
(RB=266089)
Generate alternative version of client request builders.
Change integration tests to test the new request builders.

(RB=273408)
Implementation of equals, hashCode, and toString in Request and derived classes.

(RB=273416)
Add ability in d2Config to produce d2 symlink for single-master services

1.15.0
------
(RB=271265)
Add protocol version header to error response.
Add test for protocol version in error case.

(RB=274091)
Fix example generator to include finder params in generated examples, add test.

(RB=271256)
Remove hard-coding of format of association keys in IDLs and Builders.
Add tests to ensure backwards compatibility, and make sure the path changes resulting from this in IDLs
are considered backwards compatible.

1.14.7
------
(RB=266640)
Add support of enum array in parameter's default value.

(RB=264605)
Added test utilities that can be used by application developers to test their Rest.li clients and servers.

1.14.6
------
(RB=268867)
Add dataTemplate to generateRestClient classpath for smaller Java binding.

(RB=270034)
Deprecate R2 RPC.

1.14.5
------
(RB=268683)
Fix bug in Data to Avro schema translation in which assertion will be thrown if the same record schema is included
more than once, and that schema contains fields that either have a default value or is optional.

1.14.4
------
(RB=267118)
Making request execution report generated only for debug requests.

(RB=265900)
Fix a bug where documentation strings would not show up in idls/snapshots when a method parameter was an array.

1.14.3
------
(RB=264806)
Fix a bug where RecordTemplates in Array parameters were not validated.

(RB=253429)