@@ -1,2 +1,1 @@
 apply plugin: 'pegasus'
-apply plugin: 'java'
