@@ -1,6 +1,6 @@
 # Normally, the pegasus gradle plugins check to make sure there have
-# been no incopatible changes to restspec files before publishing them
+# been no incompatible changes to restspec files before publishing them
 # to the api directory. Shut this behavior off for this example to
-# avoid confusion and extra steps
+# avoid confusion and extra steps.
 
 rest.model.compatibility=ignore
